--- a/.github/workflows/tools.yml
+++ b/.github/workflows/tools.yml
@@ -94,15 +94,15 @@ jobs:
         
     - name: acr import
       run: |
-         az acr import  -n azuretoolsacr --source docker.io/20848/frontend:1.0.0 --image frontend:v2
+         az acr import  -n azuretoolsacr --source docker.io/20848/frontend:1.0.0 --image frontend:v3
    
     - name: 🌐 kubectl apply deployment 
       run: |
           kubectl apply -f acr-nginx.yaml
    
-    - name: pull
-      run: |
-        docker pull ${{ env.AZURE_CONTAINER_REGISTRY }}.azurecr.io/frontend:v2
+    # - name: pull
+    #   run: |
+    #     docker pull ${{ env.AZURE_CONTAINER_REGISTRY }}.azurecr.io/frontend:v2
 
     - name: ☸ tye deploy
       run: |
